# Health-monitor

./: .gitignore  README.md  docker-compose.yml  package-lock.json  pyproject.toml
Backend/: Dockerfile  crud.py  database.py  main.py  models.py  schemas.py
Backend/routers/: auth.py  health.py  patients.py  users.py
Database/: CreateDatabase.sql
Frontend/vitatrack/: next.config.ts  package-lock.json  package.json
Frontend/vitatrack/app/: globals.css  layout.tsx  page.tsx
Frontend/vitatrack/communication/: addPatientCommunication.ts  getAlertsCommunication.ts  getPatientsCommunication.ts  loginCommunication.ts  logoutCommunication.ts  patientDeleteCommunication.ts  patientHealthDataCommunication.ts  patientHealthHistoryCommunication.ts  patientInfoCommunication.ts  patientLoginCommunication.ts  patientUpdateCommunication.ts  userInfoCommunicaton.ts
Frontend/vitatrack/lib/: caregiverTasks.ts  firebase.ts  store.ts  utils.ts
Frontend/vitatrack/presenters/: addPatientPage-presenter.tsx  detailedPage-presenter.tsx  detailsPage-presenter.tsx  editPatientPage-presenter.tsx  headerPage-presenter.tsx  landingPage-presenter.tsx  loginPage-presenter.tsx  overviewPage-presenter.tsx  (+2 more)
Subscriber/: Dockerfile  main.py  pyproject.toml
Subscriber/config/: settings.py
Subscriber/models/: payload.py
Subscriber/services/: db_service.py  mqtt_client.py
Subscriber/utils/: logger.py  parser.py
eps32firmware/Firmware_copy_20260430134554/: Firmware_copy_20260430134554.ino
mosquitto/: mosquitto.conf
mosquitto/certs/: ca.srl  client.csr  server.csr
nginx/: nginx.conf
(+37 files in other folders)
